adjusting pager responsive layout to collapse earlier the pager is already quite wide, so this will help avoid line wrapping situations

--- a/src/Components/Common/Pager/Pager.less
+++ b/src/Components/Common/Pager/Pager.less
@@ -17,7 +17,7 @@
   }
 
   // these styles capture non-mobile screens
-  @media (min-width: @screen-sm-min) {
+  @media (min-width: @screen-md-min) {
     // we only apply this in non-mobile because the extra height in mobile is desired
     .Pager-col {
       height: @button-height;
